# agent-router

./: .gitignore  INTEGRATION.md  README.md  package-lock.json  package.json  turbo.json
apps/api/: .pre-commit-config.yaml  Dockerfile  README-PYTHON.md  README.md  alembic.ini  create_session.py  docker-compose.yml  env.example  fix_session.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  restart-server.bat  seed.py  setup-venv-pyproject.bat  setup-venv.bat  test-api.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_items_table.py  0002_create_agent_router_tables.py
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/api/v1/: __init__.py  agents.py  analytics.py  auth.py  features.py  health.py  items.py  roles.py  routes.py  system.py
apps/api/app/core/: middleware.py  redis.py  security.py
apps/api/app/db/: __init__.py  models.py  session.py
apps/api/app/schemas/: __init__.py  agents.py  analytics.py  auth.py  features.py  item.py  roles.py  routes.py  system.py
apps/api/app/services/: __init__.py  agents.py  analytics.py  auth.py  features.py  roles.py  routes.py  system.py
apps/api/tests/: conftest.py  test_items.py
apps/web/: instrumentation.ts  next.config.ts  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/(app)/: layout.tsx
apps/web/src/app/(auth)/: layout.tsx
apps/web/src/app/(marketing)/: layout.tsx
apps/web/src/app/agent-router/: page.tsx
apps/web/src/components/charts/: index.ts
apps/web/src/components/forms/: index.ts
apps/web/src/components/icons/: index.ts
apps/web/src/components/layout/: DashboardLayout.tsx  Sidebar.tsx  TopBar.tsx
apps/web/src/components/tooltip/: index.ts
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  data-table.tsx  input.tsx  label.tsx  modal.tsx  progress.tsx  select.tsx  separator.tsx  stepper.tsx  textarea.tsx  toast.tsx
apps/web/src/features/auth/: schema.ts
apps/web/src/features/auth/components/: index.ts
apps/web/src/features/auth/server/: index.ts
apps/web/src/features/dashboard/: schema.ts
apps/web/src/features/dashboard/components/: index.ts
apps/web/src/features/dashboard/server/: index.ts
apps/web/src/features/profile/: schema.ts
apps/web/src/features/profile/components/: index.ts
apps/web/src/features/profile/server/: index.ts
apps/web/src/hooks/: useApi.ts  usePagination.ts
apps/web/src/lib/: analytics.ts  auth.ts  csp.ts  env.ts  fetcher.ts  otel.ts  permissions.ts
apps/web/src/lib/i18n/: index.ts
apps/web/src/lib/i18n/locales/: index.ts
apps/web/src/providers/: ApiProvider.tsx  auth-provider.client.tsx  query-provider.client.tsx  theme-provider.tsx  tooltip-provider.tsx
apps/web/src/styles/: tailwind.css
apps/web/src/test/e2e/: index.ts
apps/web/src/test/mocks/: handlers.ts
apps/web/src/test/unit/: index.ts
apps/web/src/types/: auth.ts  common.ts  user.ts
